--- a/Maquetacion_basica/reto3.html
+++ b/Maquetacion_basica/reto3.html
@@ -14,10 +14,26 @@
         <div class="nav"> Nav </div>
         <div class="multiple">
             <div class="multiderecha">
-                <div class="article"> Article</div>
-                <div class="header"> Header </div>
+                <div class="arriba">
+                    <div class="article"> Article</div>
+                    <div class="header"> Header </div>
+                </div>
+                <div class="abajo">
+                    <div class="section">Section</div>
+                    <div class="section">Section</div>
+                    <footer class="footer">Footer</footer>
+                </div>
             </div>
+            <div class="multiizquierda">
+                <div class="div">Div</div>
+                <div class="aside">Aside</div>
+                <div class="aside">Aside</div>
+            </div>
+                
+                
+
         </div>
+        <footer class="footer">Footer </footer>
 
     </main>
 
