--- a/Maquetacion_basica/Reto 4/galeria.html
+++ b/Maquetacion_basica/Reto 4/galeria.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="galeria.css">
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <a href="home.html" class="a"> Home </a>
+        <a href="galeria.html" class="a"> Galeria </a>
+        <a href="blog.html" class="a"> Blog </a>
+        
+    </header>
+
+    <div class="imagenes">
+        <img src="mountain.jpg" alt="">
+        <img src="faro.jpg" alt="">
+        <img src="rosa.jpg" alt="">
+        <img src="mono.jpg" alt="">
+        <img src="vista.jpg" alt="">
+        <img src="gota.jpg" alt="">
+    </div>
     
 </body>
 </html>
