--- a/Maquetacion_basica/Travel agency/travel.html
+++ b/Maquetacion_basica/Travel agency/travel.html
@@ -32,7 +32,7 @@
     </header>
 
     <!--destinations-->
-    <div class="destination">
+    <div class="destination" id="destination">
      <div class="destinaton-header">
         <h3>TravelManía Tours</h3>
         
