--- a/Maquetacion_basica/Travel agency/travel.html
+++ b/Maquetacion_basica/Travel agency/travel.html
@@ -131,7 +131,7 @@
 
                 <div class="buttons">
                 <button class="enter" onclick="importInfo()"> + Info</button>
-                <button class="enter" onclick="">filter</button>
+                <button class="enter" onclick="filter()">filter</button>
                 </div>
     
             </div>
@@ -142,6 +142,7 @@
                         <img src="mallorca.jpg" alt=""></div>
                         <div class="category"> Your Trip </div>
                         <div id="shown"></div>
+                        <div id="filtershown"></div>
                 </div>
             </div>
            
