--- a/Maquetacion_basica/Porfolio/porfolio.html
+++ b/Maquetacion_basica/Porfolio/porfolio.html
@@ -16,7 +16,7 @@
                 <div class="logo"> C <span> S </span>M</div>
                 <ul class="ul">
                     <a href="#home"> <span> Home </span></a>
-                    <a href="#"> About Me</a>
+                    <a href="#About me"> About Me</a>
                     <a href="#"> Porfolio</a>
                     <a href="#contact"> Contact</a>
                 </ul>
@@ -31,6 +31,18 @@
 
 
         </header>
+        <br>
+        <!--About Me-->
+        <div class="aboutme" id="About me">
+            <div class="info">
+                <h1>I'm <span>Celia</span> Sánchez</h1>
+                <br>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo beatae rem doloremque excepturi quis explicabo sit qui porro harum recusandae accusamus laborum expedita exercitationem rerum esse temporibus debitis, id sequi.</p>
+                <br>
+                <a download href="#"><button class="btn">Download my CV</button></a>
+            </div>
+            <img src="celia.jpg" alt="">
+        </div>
 
     </main>
     
