--- a/Maquetacion_basica/Porfolio/porfolio.html
+++ b/Maquetacion_basica/Porfolio/porfolio.html
@@ -41,7 +41,7 @@
                 <br>
                 <a download href="#"><button class="btn">Download my CV</button></a>
             </div>
-            <img src="celia.jpg" alt="">
+            <img src="celia.jpg" alt="Celia Sánchez picture">
         </div>
 
     </main>
